Content and images updated

--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -43,7 +43,7 @@
       <div class="container">
         <h1 class="heading">Alphy tours and travels <br /> Privacy Policy</h1>
         <div class="para-wrap">
-          <p>Last Updated: 19th June 2024</p>
+          <p>Last Updated: 1st July 2024</p>
 
           <p> Alphy Tours and Travels ("we," "our," or "us") is committed to protecting your privacy. This Privacy
             Policy
@@ -105,9 +105,9 @@
             assistance.</p>
 
           <h3>Partner Car Rental Service</h3>
-          <p>We share the collected data from our booking form with our partner car rental service, STEVE, to facilitate
+          <p>We share the collected data from our booking form with our partner car rental service, VOLT, to facilitate
             and
-            fulfill your car rental reservations. STEVE adheres to strict data privacy standards to ensure the security
+            fulfill your car rental reservations. VOLT adheres to strict data privacy standards to ensure the security
             and
             confidentiality of your information.</p>
 
@@ -130,10 +130,10 @@
           <p>If you have questions or comments about this Privacy Policy, please contact us at:</p>
 
           <h3> Alphy Tours and Travels</h3>
-          <h4> [Address]</h4>
-          <h4> [City, State, Zip Code]</h4>
-          <h4> [Email Address]</h4>
-          <h4> [Phone Number]</h4>
+          <h4> E/2, Satyam Shivam Sundaram CHS,</h4>
+          <h4> Kanjurmarg Village Road Near Aniket Hospital,</h4>
+          <h4> alphytoursandtravels@gmail.com</h4>
+          <h4> +91 9819274249</h4>
 
 
         </div>
@@ -151,8 +151,8 @@
       <div class="right-wrap">
         <ul>
           <li><a href="/privacy-policy/">Privacy Policy</a></li>
-          <li><a href="mailto:example@example.com">Email : example@example.com</a></li>
-          <li><a href="tel:+1234567890">Phone: +1 (234) 567-890</a></li>
+          <li><a href="mailto:example@example.com">Email : alphytoursandtravels@gmail.com</a></li>
+          <li><a href="tel:+1234567890">Phone:+91 9819274249</a></li>
         </ul>
       </div>
     </div>
