Href value updated

--- a/index.html
+++ b/index.html
@@ -473,8 +473,8 @@
       <div class="right-wrap">
         <ul>
           <li><a href="/privacy-policy/index.html">Privacy Policy</a></li>
-          <li><a href="mailto:example@example.com">Email : alphytoursandtravels@gmail.com</a></li>
-          <li><a href="tel:+1234567890">Phone: +91 9819274249</a></li>
+          <li><a href="mailto:alphytoursandtravels@gmail.com">Email : alphytoursandtravels@gmail.com</a></li>
+          <li><a href="tel:+91 9819274249">Phone: +91 9819274249</a></li>
         </ul>
       </div>
     </div>
