Pricing Section Added And Phone Number Updated

--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -152,31 +152,13 @@
         <ul>
           <li><a href="/privacy-policy/">Privacy Policy</a></li>
           <li><a href="mailto:alphytoursandtravels@gmail.com">Email : alphytoursandtravels@gmail.com</a></li>
-          <li><a href="tel:+91 9819274249">Phone:+91 9819274249</a></li>
+          <li><a href="tel:+91 95949439405">Phone: +91 95949439405</a></li>
+          <li><a href="tel:+91 7710087056">Enquiry & Booking : +91 7710087056</a> / <a href="tel:+91 7710087057">+91 7710087057</a></li>
         </ul>
       </div>
     </div>
     <p class="copyright">Copyright © 2024 | Alphy tours and travels</p>
   </footer>
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
-  <script>
-    AOS.init();
-
-    var slider = tns({
-      container: '.my-slider',
-      items: 1,
-      "edgePadding": 50,
-      gutter: 10,
-      slideBy: 'page',
-      autoplay: false,
-      "mouseDrag": true,
-      controlsContainer: "#controls",
-      nextButton: '#prev',
-      nextButton: '#next',
-    });
-
-  </script>
 </body>
 
 </html>
