Meta keywords and description added and accordion js updated as a single file

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <meta name="description" content="Your trusted travel companion for every trip! We provide a wide range of car services, affordable rates,
   exceptional customer support, and a user-friendly booking system. Experience the joy of hassle-free travel
   with Alphy Tours and Travels!">
+  <meta name="keywords" content=" car rent for one day, booking car rental, airport car rental, online car rental, rentalcars, car on rent without driver, car travels, car for rent, car hire, self-drive cars, best car rental, rent a car,  car rental, self drive car rental, self drive car, monthly car rental, car on rent without driver, luxury car rental  " />
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Alphy tours and travels" />
@@ -646,6 +647,7 @@
 
   </script>
   <script src="./assets/js/index.js"></script>
+  <script src="./assets/js/accordion.js"></script>
 </body>
 
 </html>
