--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -8,9 +8,7 @@
   <link rel="icon" href="./../assets/images/favicon.ico">
   <link rel="stylesheet" href="./../assets/css/base.css">
   <link rel="stylesheet" href="./../assets/css/privacy.css">
-  <meta name="description" content="Your trusted travel companion for every trip! We provide a wide range of car services, affordable rates,
-  exceptional customer support, and a user-friendly booking system. Experience the joy of hassle-free travel
-  with Alphy Tours and Travels!">
+  <meta name="description" content="Read our privacy policy to understand how we collect, use, and protect your personal information. Learn about your rights and how we comply with data protection regulations.">
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Alphy tours and travels" />
