Terms and Conditions added and content updated

--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
                 </p>
                 <p class="field-block">
                   <label>
+                    <span>Please provide your Reporting Address</span>
+                    <input type="text" name="reporting-address" placeholder="123 Street Name, City, State, ZIP" required class="form__input" />
+                  </label>
+                </p>
+                <p class="field-block">
+                  <label>
                     <span>Please Enter your Phone Number</span>
                     <input type="text" pattern="[6789][0-9]{9}" placeholder="9090909090" required class="form__input">
 
@@ -111,31 +117,31 @@
               <div class="accordion-body" style="max-height: 500px;">
                 <div class="table-data">
                   <p>Local duty (8 hrs/80 Km): </p>
-                  <p> 8000/-</p>
+                  <p> 8500/-</p>
                 </div>
                 <div class="table-data">
                   <p>Pick-up & Drop (4 hrs/40 Km): </p>
-                  <p> 5000/-</p>
+                  <p> 5500/-</p>
                 </div>
                 <div class="table-data">
                   <p>Above 4 or 8 Hour’s: </p>
-                  <p> 750/-</p>
+                  <p> 800/- Per Hour</p>
                 </div>
                 <div class="table-data">
                   <p>Above 40 or 80 Km: </p>
-                  <p> 75/-</p>
+                  <p> 75/- Per Km</p>
                 </div>
                 <div class="table-data">
                   <p>Out-Stn 300KM/day: </p>
-                  <p> 70/-</p>
+                  <p> 75/- Per Km</p>
                 </div>
                 <div class="table-data">
                   <p>Out-Stn Driver allowance Per Day/Trip: </p>
-                  <p> 750/-</p>
+                  <p> 800/-</p>
                 </div>
                 <div class="table-data">
                   <p>Out-Stn night halt Charge Per Night: </p>
-                  <p> 400/-</p>
+                  <p> 500/-</p>
                 </div>
               </div>
             </div>
@@ -147,23 +153,23 @@
               <div class="accordion-body" >
                 <div class="table-data">
                   <p>Local duty (8 hrs/80 Km): </p>
-                  <p> 4000/-</p>
+                  <p> 4200/-</p>
                 </div>
                 <div class="table-data">
                   <p>Pick-up & Drop (4 hrs/40 Km): </p>
-                  <p> 3000/-</p>
+                  <p> 3200/-</p>
                 </div>
                 <div class="table-data">
                   <p>Above 4 or 8 Hour’s: </p>
-                  <p> 400/-</p>
+                  <p> 400/- Per Hour</p>
                 </div>
                 <div class="table-data">
                   <p>Above 40 or 80 Km: </p>
-                  <p> 33/-</p>
+                  <p> 35/- Per Km</p>
                 </div>
                 <div class="table-data">
                   <p>Out-Stn 300KM/day: </p>
-                  <p> 32/-</p>
+                  <p> 35/- Per Km</p>
                 </div>
                 <div class="table-data">
                   <p>Out-Stn Driver allowance Per Day/Trip: </p>
@@ -183,23 +189,23 @@
               <div class="accordion-body" >
                 <div class="table-data">
                   <p>Local duty (8 hrs/80 Km): </p>
-                  <p> 3800/-</p>
+                  <p> 4000/-</p>
                 </div>
                 <div class="table-data">
                   <p>Pick-up & Drop (4 hrs/40 Km): </p>
-                  <p> 2600/-</p>
+                  <p> 3000/-</p>
                 </div>
                 <div class="table-data">
                   <p>Above 4 or 8 Hour’s: </p>
-                  <p> 350/-</p>
+                  <p> 400/- Per Hour</p>
                 </div>
                 <div class="table-data">
                   <p>Above 40 or 80 Km: </p>
-                  <p> 33/-</p>
+                  <p> 33/- Per Km</p>
                 </div>
                 <div class="table-data">
                   <p>Out-Stn 300KM/day: </p>
-                  <p> 32/-</p>
+                  <p> 33/- Per Km</p>
                 </div>
                 <div class="table-data">
                   <p>Out-Stn Driver allowance Per Day/Trip: </p>
@@ -620,7 +626,7 @@
         <ul>
           <li><a href="/privacy-policy/index.html">Privacy Policy</a></li>
           <li><a href="mailto:alphytoursandtravels@gmail.com">Email : alphytoursandtravels@gmail.com</a></li>
-          <li><a href="tel:+91 95949439405">Phone: +91 95949439405</a></li>
+          <li><a href="tel:+91 9594939405">Phone: +91 9594939405</a></li>
           <li><a href="tel:+91 7710087056">Enquiry & Booking : +91 7710087056</a> / <a href="tel:+91 7710087057">+91 7710087057</a></li>
         </ul>
       </div>
