--- a/our-pricing/index.html
+++ b/our-pricing/index.html
@@ -29,8 +29,15 @@
       <header>
         <nav>
           <div class="logo-wrap">
-            <a href="https://alphytoursandtravels.com/"><img src="./../assets/images/alphy_logo.png"
-                alt="Logo for Alphy tours and travels" width="847" height="294"></a>
+            <a href="https://alphytoursandtravels.com/">
+              <div class="globe-wrap">
+                <svg id="globe" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path d="M53.85 47.85A27 27 0 0 1 24 57.8V56l3-3v-4l4-4v-3l4 4h5l2-2h8z"/><path d="M42 20.59v2.56L38.07 27H31l-5.36 5.26L31 37.51v5.06L27.44 39h-4.58L16 32.11V24.2L11.8 20h-4A27 27 0 0 1 32 5a26.55 26.55 0 0 1 7.06.94L36 9h-6v4l4 4h4.33z"/><path d="M32 60a28 28 0 1 1 28-28 28 28 0 0 1-28 28zm0-54a26 26 0 1 0 26 26A26 26 0 0 0 32 6z"/></svg>
+              </div>
+              <div class="logo-content">
+                <p class="bold">ALPHY</p> 
+                <p>Tours and Travels</p>
+              </div>
+            </a>
           </div>
 
         </nav>
@@ -356,9 +363,16 @@
   <footer>
     <div class="container">
       <div class="left-wrap">
-        <div class="img-wrap">
-          <a href="https://alphytoursandtravels.com/"><img loading="lazy" src="./../assets/images/alphy_logo.png"
-              alt="Logo for Alphy tours and travels" width="847" height="294"></a>
+        <div class="logo-wrap">
+          <a href="https://alphytoursandtravels.com/">
+            <div class="globe-wrap">
+              <svg id="globe" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path d="M53.85 47.85A27 27 0 0 1 24 57.8V56l3-3v-4l4-4v-3l4 4h5l2-2h8z"/><path d="M42 20.59v2.56L38.07 27H31l-5.36 5.26L31 37.51v5.06L27.44 39h-4.58L16 32.11V24.2L11.8 20h-4A27 27 0 0 1 32 5a26.55 26.55 0 0 1 7.06.94L36 9h-6v4l4 4h4.33z"/><path d="M32 60a28 28 0 1 1 28-28 28 28 0 0 1-28 28zm0-54a26 26 0 1 0 26 26A26 26 0 0 0 32 6z"/></svg>
+            </div>
+            <div class="logo-content">
+              <p class="bold">ALPHY</p> 
+              <p>Tours and Travels</p>
+            </div>
+          </a>
         </div>
       </div>
       <div class="right-wrap">
