fix: naming convention issue for globe svg

--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -8,7 +8,8 @@
   <link rel="icon" href="./../assets/images/favicon.ico">
   <link rel="stylesheet" href="./../assets/css/base.css">
   <link rel="stylesheet" href="./../assets/css/privacy.css">
-  <meta name="description" content="Read our privacy policy to understand how we collect, use, and protect your personal information. Learn about your rights and how we comply with data protection regulations.">
+  <meta name="description"
+    content="Read our privacy policy to understand how we collect, use, and protect your personal information. Learn about your rights and how we comply with data protection regulations.">
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Alphy tours and travels" />
@@ -31,10 +32,15 @@
           <div class="logo-wrap">
             <a href="https://alphytoursandtravels.com/">
               <div class="globe-wrap">
-                <svg id="globe" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path d="M53.85 47.85A27 27 0 0 1 24 57.8V56l3-3v-4l4-4v-3l4 4h5l2-2h8z"/><path d="M42 20.59v2.56L38.07 27H31l-5.36 5.26L31 37.51v5.06L27.44 39h-4.58L16 32.11V24.2L11.8 20h-4A27 27 0 0 1 32 5a26.55 26.55 0 0 1 7.06.94L36 9h-6v4l4 4h4.33z"/><path d="M32 60a28 28 0 1 1 28-28 28 28 0 0 1-28 28zm0-54a26 26 0 1 0 26 26A26 26 0 0 0 32 6z"/></svg>
+                <svg class="globe-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+                  <path d="M53.85 47.85A27 27 0 0 1 24 57.8V56l3-3v-4l4-4v-3l4 4h5l2-2h8z" />
+                  <path
+                    d="M42 20.59v2.56L38.07 27H31l-5.36 5.26L31 37.51v5.06L27.44 39h-4.58L16 32.11V24.2L11.8 20h-4A27 27 0 0 1 32 5a26.55 26.55 0 0 1 7.06.94L36 9h-6v4l4 4h4.33z" />
+                  <path d="M32 60a28 28 0 1 1 28-28 28 28 0 0 1-28 28zm0-54a26 26 0 1 0 26 26A26 26 0 0 0 32 6z" />
+                </svg>
               </div>
               <div class="logo-content">
-                <p class="bold">ALPHY</p> 
+                <p class="bold">ALPHY</p>
                 <p>Tours and Travels</p>
               </div>
             </a>
@@ -151,10 +157,15 @@
         <div class="logo-wrap">
           <a href="https://alphytoursandtravels.com/">
             <div class="globe-wrap">
-              <svg id="globe" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path d="M53.85 47.85A27 27 0 0 1 24 57.8V56l3-3v-4l4-4v-3l4 4h5l2-2h8z"/><path d="M42 20.59v2.56L38.07 27H31l-5.36 5.26L31 37.51v5.06L27.44 39h-4.58L16 32.11V24.2L11.8 20h-4A27 27 0 0 1 32 5a26.55 26.55 0 0 1 7.06.94L36 9h-6v4l4 4h4.33z"/><path d="M32 60a28 28 0 1 1 28-28 28 28 0 0 1-28 28zm0-54a26 26 0 1 0 26 26A26 26 0 0 0 32 6z"/></svg>
+              <svg class="globe-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+                <path d="M53.85 47.85A27 27 0 0 1 24 57.8V56l3-3v-4l4-4v-3l4 4h5l2-2h8z" />
+                <path
+                  d="M42 20.59v2.56L38.07 27H31l-5.36 5.26L31 37.51v5.06L27.44 39h-4.58L16 32.11V24.2L11.8 20h-4A27 27 0 0 1 32 5a26.55 26.55 0 0 1 7.06.94L36 9h-6v4l4 4h4.33z" />
+                <path d="M32 60a28 28 0 1 1 28-28 28 28 0 0 1-28 28zm0-54a26 26 0 1 0 26 26A26 26 0 0 0 32 6z" />
+              </svg>
             </div>
             <div class="logo-content">
-              <p class="bold">ALPHY</p> 
+              <p class="bold">ALPHY</p>
               <p>Tours and Travels</p>
             </div>
           </a>
@@ -165,7 +176,8 @@
           <li><a href="/privacy-policy/">Privacy Policy</a></li>
           <li><a href="mailto:alphytoursandtravels@gmail.com">Email : alphytoursandtravels@gmail.com</a></li>
           <li><a href="tel:+91 9594939405">Phone: +91 9594939405</a></li>
-          <li><a href="tel:+91 7710087056">Enquiry & Booking : +91 7710087056</a> / <a href="tel:+91 7710087057">+91 7710087057</a></li>
+          <li><a href="tel:+91 7710087056">Enquiry & Booking : +91 7710087056</a> / <a href="tel:+91 7710087057">+91
+              7710087057</a></li>
         </ul>
       </div>
     </div>
